Rename package from bilby-pr-unbounded to bilby-pr and improve documentation
- Renamed package and module from bilby_pr_unbounded to bilby_pr
- Changed sampler name from dynesty_pr_unbounded to dynesty_pr
- Renamed main class from DynestyPRUnbounded to DynestyPR
- Improved all docstrings and comments for clarity
- Rewrote README with correct explanation of posterior repartitioning
- Added proper citations and installation instructions
- Updated pyproject.toml with new package metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bilby-pr"
-description = "Posterior repartitioning in bilby"
+description = "Posterior repartitioning in bilby using normalizing flows (margarine_unbounded)"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
@@ -15,6 +15,8 @@ dependencies = [
     "bilby>=2.3.0",
     "numpy",
     "dynesty",
+    "tensorflow>=2.8.0",
+    "tensorflow-probability>=0.16.0",
 ]
 
 dynamic = ["version"]
